--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,15 @@ i:hover{
 #updateModalContent *{
     z-index: 100;
 }
+#footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    height: 50px;
+    background-color: black;
+    color: white;
+}
 @media(max-width:768px){
     .sideNav{
         display: none;
